--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
+body {
+  margin: 0;
+  padding: 8px;
+}
+
 .hands {
   counter-reset: matching_dice;
-  border: 1px solid black;
+  border: 1px solid red;
+  flex: 50%;
   width: fit-content;
 }
 .hands.selected.one :not(.unknown) .diceFace.one:not(.unknown) {
@@ -159,11 +165,12 @@
 }
 
 .game_area {
+  margin: 0;
   border: 1px solid black;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: fit-content;
+  width: 100%;
 }
 
 .my_actions {
@@ -182,9 +189,18 @@
 }
 
 .bet {
+  border-radius: 0.5em;
+  margin: 0.5em 0;
+  background-color: rgb(219, 255, 236);
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.bet .player_identifier {
+  font-size: 1.5em;
+}
+.bet .player_identifier .player_name {
+  font-weight: 600;
 }
 .bet .bet_multiplier {
   font-size: 2em;
@@ -193,9 +209,13 @@
 }
 .bet .bet_multiplier input,
 .bet .bet_multiplier p {
-  border: 1px solid lightgrey;
+  text-align: end;
   font-size: 1em;
   width: 2em;
+}
+
+.action_display {
+  flex: 50%;
 }
 
 /*# sourceMappingURL=styles.css.map */
