--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 8px;
+  background-color: #ede9d9;
 }
 
 .hands {
@@ -278,6 +279,39 @@ body {
 .action.selected.six :not(.unknown) .diceFace.six:not(.unknown) {
   border: 4px solid red;
   counter-increment: matching_dice;
+}
+
+.landing_page {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 50vw;
+}
+.landing_page h3 {
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: 400;
+}
+.landing_page .landing_page_action_container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.landing_page .landing_page_action_container button {
+  height: 2em;
+  font-size: 1.5em;
+  border-radius: 0.2em;
+  background-color: darkgreen;
+  color: lightblue;
+}
+.landing_page .landing_page_action_container button#CreateLobbyButton:hover {
+  text-shadow: 1px 1px 5px #ffcc00;
+}
+.landing_page .landing_page_action_container button#JoinLobbyButton:hover {
+  text-shadow: 1px 1px 5px #414180;
 }
 
 /*# sourceMappingURL=styles.css.map */
