--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ body {
 .hands {
     counter-reset: matching_dice;
     border: 1px solid red;
-    flex: 50%;
+    // flex: 50%;
     width: fit-content;
 
 
@@ -42,6 +42,13 @@ body {
 
 }
 
+.current_player{
+    .hand{
+    background-color: gold;
+    // color: gold;
+    }
+}
+
 .hand {
     border: 1px solid black;
 
@@ -54,7 +61,9 @@ body {
     display: flex;
     width: fit-content;
     background-color: lightblue;
+
 }
+
 
 
 .diceFace {
@@ -211,19 +220,62 @@ body {
     margin: 0;
     border: 1px solid black;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 
     // width: fit-content;
     .action_display {
-        flex: 50%;
+        // flex: 10%;
+        width: 50%;
+        
 
         .bet_history {
             max-height: 75vh; // magic number
             overflow-y: auto;
         }
 
+    }
+    .game_info {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        // justify-content: space-bet;
+        align-items: center;
+        h4 {
+            font-weight: 400;
+            font-size: 1.5em;
+            .player_name {
+                font-weight: 600;                    
+            }
+        }
+
+    }
+    .hand_display {
+        display: flex;
+        border: 1px solid black;
+        margin: 0.5em;
+        .hands, .player_names {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            // margin: 0.5em;
+            .hand {
+                margin: .5em;
+            }
+            p {
+                // font-weight: 400;
+                font-size: 1.5em;
+                .player_name {
+                    font-weight: 600;                    
+                }
+                &.current_player {
+                    font-weight: 600;
+                    font-size: 1.7em;    
+                    text-shadow: 1px 1px 5px rgb(255, 241, 160);                
+                }
+            }
+        }
     }
 
 }
@@ -244,8 +296,12 @@ body {
         color: lightblue;
 
         &:disabled {
-            background-color: rgb(98, 133, 98);
+            background-color: grey;
+            &.my_turn {
+                background-color: rgb(98, 133, 98);
+            }
         }
+        
     }
 }
 
