Introduced end game state (haveILost, whoWon), introduced a modal to show end game and propogated data out of connection without use of state :O

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,14 @@ $edge_length: 2em;
 $normal_dice_face_values: "two", "three", "four", "five", "six";
 $all_dice_face_values: "one", "two", "three", "four", "five", "six";
 
-
+dialog::backdrop {
+    background-image: linear-gradient(45deg,
+            magenta,
+            rebeccapurple,
+            dodgerblue,
+            green);
+    opacity: 0.75;
+}
 
 body {
     margin: 0;
