--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+dialog::backdrop {
+  background-image: linear-gradient(45deg, magenta, rebeccapurple, dodgerblue, green);
+  opacity: 0.75;
+}
+
 body {
   margin: 0;
   padding: 8px;
